<resources>
    <string name="app_name">Mascotas</string>
    <string name="top_name">Top 5</string>
    <string name="nombre_mascota">Perro</string>
    <string name="raiting_mascota">0</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_contacto">Contacto</string>
    <string name="spike">SPIKE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_datos">DatosActivity</string>

    <string name="txt_nombre">Nombre completo</string>
    <string name="txt_correo">Correo electrónico</string>
    <string name="txt_comentario">Comentario</string>
    <string name="txt_btnEnviar">Enviar</string>

    <string name="TNombre">Creado por: </string>
    <string name="Nombre">Ian Arvizu Sosa </string>
    <string name="TCorreo">Correo personal: </string>
    <string name="Correo">ian.arvizu9@gmail.com</string>
    <string name="BtnOk">OK</string>
</resources>
