<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TNombre"
                android:id="@+id/textView26"
                android:textSize="14pt"
                android:layout_gravity="left"
                android:layout_weight="0.29"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre"
            android:id="@+id/textView28"
            android:textSize="14pt"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TCorreo"
                android:id="@+id/textView29"
                android:textSize="14pt"
                android:layout_gravity="left"
                android:layout_weight="0.13"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Correo"
            android:id="@+id/textView30"
            android:textSize="14pt"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BtnOk"
            android:id="@+id/buttonOk"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:onClick="onClickOk"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

</RelativeLayout>
