<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopActivity"
    android:background="@color/colorBackground">

    <include
        android:id="@+id/miActionBarDatos"
        layout="@layout/actionbar"
        >

    </include>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/miActionBarDatos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            >

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:maxLength="20"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_correo"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:singleLine="true"
                android:maxLength="50"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.18">

            <EditText
                android:id="@+id/comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_comentario"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@_.-1234567890"
                android:maxLength="100"
                android:linksClickable="false"
                android:lines="4"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btnEnviar"
        android:id="@+id/btnEnviar"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:theme="@style/myRaisedButton"
        android:layout_alignParentBottom="true"
        android:onClick="onClickEnviarDatos" />
</RelativeLayout>